deploy/k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cert-watch-demo
  namespace: cert-watch-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-porkbun
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-external
  tls:
    - hosts: [cert-watch-demo.hraedon.com]
      secretName: cert-watch-demo-tls
  rules:
    - host: cert-watch-demo.hraedon.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cert-watch-demo
                port:
                  name: http
